clusters/mattflix/apps/plex/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plex
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.0.20
spec:
  selector:
    app.kubernetes.io/name: plex
  type: LoadBalancer
  ports:
    - name: plex-main
      protocol: TCP
      port: 32400
      targetPort: 32400
    - name: plex-dlna-1
      protocol: UDP
   	  port: 1900
   	  targetPort: 1900
   	- name: plex-dlna-2
   	  protocol: TCP
   	  port: 32469
   	  targetPort: 32469
   	- name: plex-avahi
   	  protocol: UDP
   	  port: 5353
   	  targetPort: 5353
   	- name: plex-roku
   	  protocol: TCP
   	  port: 8324
   	  targetPort: 8324
   	- name: plex-gdm-1
   	  protocol: UDP
   	  port: 32410
   	  targetPort: 32410
   	- name: plex-gdm-2
   	  protocol: UDP
   	  port: 32412
   	  targetPort: 32412
   	- name: plex-gdm-3
   	  protocol: UDP
   	  port: 32413
   	  targetPort: 32413
   	- name: plex-gdm-4
   	  protocol: UDP
   	  port: 32414
   	  targetPort: 32414
