clusters/mattflix/apps/plex/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "plex.mattflix.au"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: plex-service
              port:
                number: 32400
